# antd-lua-plugin

./: .drone.yml  .gitignore  Jenkinsfile  Makefile  Makefile.am  README.md  array-wrapper.c  configure.ac  db-wrapper.c  json-wrapper.c  lib.mk  lua-api.c  lua-api.h  plugin-wrapper.c  var.mk
3rd/: Makefile.am
3rd/lua-5.3.4/: Makefile  lua  luac
APIs/: api.lua  extra_mime.lua  std.lua  utils.lua  web.lua
lib/: Makefile.am  curl  lualib.h
lib/ann/: Makefile  Makefile.am  ann.c  data.c  extension.c  lfann.h  net.c
lib/ann/examples/cascade/: test.lua
lib/ann/examples/rpg/: test.lua  train.lua
lib/ann/examples/xor/: test.lua  train.data
lib/ann/fann/: CMakeLists.txt  Makefile.am
lib/ann/tests/: cascade.lua  creation.lua  data.lua  run.lua  xor.net  xor.test
lib/asl/: Makefile.am  antd.c  ffi.c  handle.c  json.c  sqlitedb.c  ulib.c  wurl.c
lib/core/: Makefile.am
lib/core/lua-5.3.4/: Makefile
lib/ffi/: Makefile  Makefile.am  ffi.c
lib/ffi/example/: Makefile  example.lua  lib.c
lib/md/: Makefile.am  md.c
lib/pibot/: Makefile  pibot.c
lib/stmr/: Makefile  Makefile.am  stmr.c
lib/ulib/: Makefile  Makefile.am  ulib.c
lib/wurl/: Makefile  Makefile.am  test.c  wurl.c
